Se aplica uso de jquery

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,10 +32,22 @@ body {
 .titulo {
     font-size: 2.5rem;
 }
+.font-size-1rem{
+    font-size: 1rem;
+}
+.btn-custom{
+    --bs-btn-color: #373A3C !important;
+    --bs-btn-border-color: #DDDDDD !important;
+}
+.btn-custom:hover{
+    font-size: 1rem;
+    --bs-btn-color: #373A3C !important;
+    --bs-btn-border-color: #DDDDDD !important;
+}
 #contacto{
     background-color: #DC3545;
 }
-#contactop{
+#contacto p{
     font-size: 1.5rem;
 }
 #contacto p{
